--- a/src/Sofia/Sofia.csproj
+++ b/src/Sofia/Sofia.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+    <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>353d53e1-2bb8-4033-b00e-76312f803cd2</UserSecretsId>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
-
+  
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
     <PackageReference Include="BouncyCastle" Version="1.8.5" />
